--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <section class="category-shortcut">
       <div class="category-shortcut-inner">
         <div class="category-shortcut-items">
-          <a href="/html/category-main.html" class="category-shortcut-item">
+          <a href="/ebs/html/category-main.html" class="category-shortcut-item">
             <em><i class="bi bi-calendar-event"></i></em>
             <span>초등 ON</span>
           </a>
@@ -120,19 +120,19 @@
             <em><i class="bi bi-code"></i></em>
             <span>컴활</span>
           </a>
-          <a href="/html/category-main.html" class="category-shortcut-item">
+          <a href="/ebs/html/category-main.html" class="category-shortcut-item">
             <em><i class="bi bi-graph-up-arrow"></i></em>
             <span>중학프리미엄</span>
           </a>
-          <a href="/html/category-main.html" class="category-shortcut-item">
+          <a href="/ebs/html/category-main.html" class="category-shortcut-item">
             <em><i class="bi bi-spellcheck"></i></em>
             <span>토익·외국어</span>
           </a>
-          <a href="/html/category-main.html" class="category-shortcut-item">
+          <a href="/ebs/html/category-main.html" class="category-shortcut-item">
             <em><i class="bi bi-cup-hot"></i></em>
             <span>평생바우처</span>
           </a>
-          <a href="/html/category-main.html" class="category-shortcut-item">
+          <a href="/ebs/html/category-main.html" class="category-shortcut-item">
             <em><i class="bi bi-three-dots"></i></em>
             <span>더 보기</span>
           </a>
